//
//  IdentifierConstants.swift
//  Survey
//
//  Created by Cristian Serea on 04.04.2024.
//

import Foundation

struct IdentifierConstants {
    static let surveyViewWelcome = "SurveyView.Welcome"
    static let surveyViewDescription = "SurveyView.Description"
    static let surveyViewStartSurvery = "SurveyView.StartSurvery"
    static let loadingButtonProgressView = "LoadingButton.ProgressView"
    static let questionsViewPrevious = "QuestionsView.Previous"
    static let questionsViewNext = "QuestionsView.Next"
    static let questionsViewQuestionsSubmitted = "QuestionsView.QuestionsSubmitted"
    static let questionsViewQuestion = "QuestionsView.Question"
    static let questionsViewTextField = "QuestionsView.TextField"
    static let questionsViewSubmitQuestion = "QuestionsView.SubmitQuestion"
}
